yml file chnages

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # API Configuration
 BACKEND_URL=https://livestreamingclaims-hpaedbd6b6gbhkb0.centralindia-01.azurewebsites.net
-VITE_API_URL=https://livestreamingclaims.azurewebsites.net
-VITE_SOCKET_URL=wss://livestreamingclaims.azurewebsites.net
+VITE_API_URL=https://livestreamingclaims-hpaedbd6b6gbhkb0.centralindia-01.azurewebsites.net
+VITE_SOCKET_URL=wss://livestreamingclaims-hpaedbd6b6gbhkb0.centralindia-01.azurewebsites.net
 NODE_ENV=production
