--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # API Configuration
-BACKEND_URL=https://livestreamingclaims-hpaedbd6b6gbhkb0.centralindia-01.azurewebsites.net
 VITE_API_URL=https://livestreamingclaims-hpaedbd6b6gbhkb0.centralindia-01.azurewebsites.net
 VITE_SOCKET_URL=wss://livestreamingclaims-hpaedbd6b6gbhkb0.centralindia-01.azurewebsites.net
+VITE_APP_URL=https://nice-sea-057f1c900.4.azurestaticapps.net
 NODE_ENV=production
