Update video calling feature

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,7 @@
 # API Configuration
-BACKEND_URL=http://localhost:5000
-VITE_API_URL=http://localhost:5000
-VITE_SOCKET_URL=http://localhost:5000
+VITE_API_URL=https://192.168.8.120:3000
+VITE_SOCKET_URL=https://192.168.8.120:3000
+VITE_ALLOW_LOCAL=true
+
+# CORS Configuration
+VITE_CORS_ENABLED=true
