--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.26.0",
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.17",
@@ -23,7 +24,8 @@
     "react-router-dom": "^6.22.1",
     "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.4",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "webrtc-adapter": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
@@ -33,6 +35,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "selfsigned": "^2.4.1",
     "vite": "^5.1.0"
   }
 }
