--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.17",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
