--- a/.github/workflows/azure-static-web-app.yml
+++ b/.github/workflows/azure-static-web-app.yml
@@ -14,9 +14,6 @@ jobs:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
     name: Build and Deploy Job
-    permissions:
-       id-token: write
-       contents: read
     steps:
       - uses: actions/checkout@v3
         with:
@@ -36,36 +33,26 @@ jobs:
         run: |
           echo "Setting production environment"
           cp .env.production .env
-          echo "VITE_API_URL=https://livestreamingclaims-hpaedbd6b6gbhkb0.centralindia-01.azurewebsites.net" >> .env
-          echo "VITE_SOCKET_URL=wss://livestreamingclaims-hpaedbd6b6gbhkb0.centralindia-01.azurewebsites.net" >> .env
+          echo "VITE_API_URL=https://livestreaming-fjghamgvdsdbd7ct.centralindia-01.azurewebsites.net" >> .env
+          echo "VITE_SOCKET_URL=wss://livestreaming-fjghamgvdsdbd7ct.centralindia-01.azurewebsites.net" >> .env
           echo "VITE_APP_URL=https://nice-sea-057f1c900.4.azurestaticapps.net" >> .env
+          echo "VITE_AWS_REGION=eu-north-1" >> .env
+          echo "VITE_AWS_S3_BUCKET=lvsbucket-5181" >> .env
           echo "NODE_ENV=production" >> .env
+
       - name: Build
-        run: |
-          npm run build
-          mv dist build
-      - name: Install OIDC Client from Core Package
-        run: npm install @actions/core@1.6.0 @actions/http-client
+        run: npm run build
 
-      - name: Get Id Token
-        uses: actions/github-script@v6
-        id: idtoken
-        with:
-           script: |
-               const coredemo = require('@actions/core')
-               return await coredemo.getIDToken()
-           result-encoding: string
-
-      - name: Build And Deploy
+      - name: Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_NICE_SEA_057F1C900 }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
           app_location: "/" # App source code path
           api_location: "" # Api source code path - optional
-          output_location: "build" # Built app content directory
-          github_id_token: ${{ steps.idtoken.outputs.result }}
+          output_location: "dist" # Built app content directory - changed from build to dist
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
