--- a/.github/workflows/azure-static-web-app.yml
+++ b/.github/workflows/azure-static-web-app.yml
@@ -8,62 +8,18 @@ on:
     types: [opened, synchronize, reopened, closed]
     branches:
       - master
-  workflow_dispatch:
 
 jobs:
   build_and_deploy_job:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed') || github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
     name: Build and Deploy Job
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: true
-          lfs: false
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Set environment variables
-        run: |
-          echo "Setting production environment"
-          cp .env.production .env
-          echo "VITE_API_URL=https://livestreaming-fjghamgvdsdbd7ct.centralindia-01.azurewebsites.net" >> .env
-          echo "VITE_SOCKET_URL=wss://livestreaming-fjghamgvdsdbd7ct.centralindia-01.azurewebsites.net" >> .env
-          echo "VITE_APP_URL=https://thankful-dune-06ac8a600.3.azurestaticapps.net" >> .env
-          echo "VITE_AWS_REGION=eu-north-1" >> .env
-          echo "VITE_AWS_S3_BUCKET=lvsbucket-5181" >> .env
-          echo "NODE_ENV=production" >> .env
-
-      - name: Build
-        run: npm run build
-
-      - name: Create build directory and copy optimized dist content
-        run: |
-          echo "Creating build directory and copying optimized dist content..."
-          mkdir -p build
-          # Copy only essential files, excluding sourcemaps
-          cp -r dist/*.html build/
-          cp -r dist/assets build/
-          # Remove any source maps to reduce file count
-          find build -name "*.map" -type f -delete
-
-      - name: List build output
-        run: |
-          echo "Listing build output directories:"
-          ls -la
-          echo "Dist directory content:"
-          ls -la dist
-          echo "Build directory content:"
-          ls -la build
-
-      - name: Deploy
+      - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
         with:
@@ -72,8 +28,9 @@ jobs:
           action: "upload"
           app_location: "/"
           api_location: ""
-          output_location: "build"
-          skip_app_build: true # Skip Azure's build since we already built and copied to build/
+          output_location: "dist"
+          app_build_command: "npm run build"
+          skip_app_build: false
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
