--- a/.github/workflows/azure-static-web-app.yml
+++ b/.github/workflows/azure-static-web-app.yml
@@ -19,6 +19,25 @@ jobs:
         with:
           submodules: true
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Create .env file
+        run: |
+          echo "Creating .env file..."
+          echo "VITE_API_URL=https://livestreaming-fjghamgvdsdbd7ct.centralindia-01.azurewebsites.net" > .env
+          echo "VITE_SOCKET_URL=wss://livestreaming-fjghamgvdsdbd7ct.centralindia-01.azurewebsites.net" >> .env
+          echo "VITE_APP_URL=https://thankful-dune-06ac8a600.3.azurestaticapps.net" >> .env
+          echo "VITE_AWS_REGION=eu-north-1" >> .env
+          echo "VITE_AWS_S3_BUCKET=lvsbucket-5181" >> .env
+          # Remove NODE_ENV from .env as it's not supported in Vite
+          cat .env
+
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
@@ -30,6 +49,7 @@ jobs:
           api_location: ""
           output_location: "dist"
           app_build_command: "npm run build"
+          config_file_location: "/"
           skip_app_build: false
 
   close_pull_request_job:
