--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-# Azure Storage Configuration
-VITE_AZURE_STORAGE_ACCOUNT_NAME=your_account_name
-VITE_AZURE_STORAGE_ACCOUNT_KEY=your_storage_account_key
-VITE_AZURE_STORAGE_ENDPOINT=https://your_account_name.blob.core.windows.net
-VITE_AZURE_SCREENSHOTS_CONTAINER=claims-screenshots
-VITE_AZURE_VIDEOS_CONTAINER=claims-recordings
+# WebRTC Configuration
+VITE_TURN_SERVER_URL=turn:global.turn.twilio.com:3478?transport=udp
+VITE_TURN_SERVER_USERNAME=your_twilio_username
+VITE_TURN_SERVER_CREDENTIAL=your_twilio_credential
+
+# Add these to your actual .env file with real credentials
+# You can get free TURN server credentials from services like Twilio or use a custom TURN server
